--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -30,6 +30,9 @@ jobs:
       ANDROID_NDK_VERSION: "25.2.9519653"
       ANDROIDAPI: "32"
       ANDROIDMINAPI: "32"
+      # Обход проблем с libffi
+      LIBFFI_CFLAGS: "-I/usr/include/arm-linux-gnueabihf"
+      LIBFFI_LIBS: "-lffi"
 
     steps:
       - name: Checkout
@@ -55,6 +58,16 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
+
+      - name: Install build tools for libffi
+        run: |
+          set -euxo pipefail
+          sudo apt-get update
+          sudo apt-get install -y autoconf automake libtool pkg-config autoconf-archive
+          # Проверяем версии
+          autoconf --version
+          automake --version
+          libtool --version
 
       - name: Install system deps (Ubuntu 24.04)
         run: |
@@ -485,6 +498,8 @@ jobs:
           ANDROID_NDK_VERSION: ${{ env.ANDROID_NDK_VERSION }}
           ANDROIDAPI: ${{ env.ANDROIDAPI }}
           ANDROIDMINAPI: ${{ env.ANDROIDMINAPI }}
+          LIBFFI_CFLAGS: ${{ env.LIBFFI_CFLAGS }}
+          LIBFFI_LIBS: ${{ env.LIBFFI_LIBS }}
         run: |
           set -euo pipefail
           mkdir -p logs
