fix: Исправление проблемы с libtool
- Добавлена установка libtool-bin пакета
- Добавлена проверка доступности libtool и libtool-bin
- Добавлено создание символической ссылки libtool -> libtool-bin при необходимости
- Улучшена диагностика установки инструментов разработки

Исправляет:
- libtool: command not found
- Ошибку установки инструментов разработки
- Проблемы с доступностью libtool в PATH

--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -63,11 +63,19 @@ jobs:
         run: |
           set -euxo pipefail
           sudo apt-get update
-          sudo apt-get install -y autoconf automake libtool pkg-config autoconf-archive
+          sudo apt-get install -y autoconf automake libtool libtool-bin pkg-config autoconf-archive
           # Проверяем версии
           autoconf --version
           automake --version
-          libtool --version
+          libtool --version || echo "libtool not found, trying libtool-bin"
+          libtool-bin --version || echo "libtool-bin not found"
+          # Проверяем доступность libtool
+          which libtool || which libtool-bin || echo "No libtool found in PATH"
+          # Создаем символическую ссылку если нужно
+          if ! which libtool && which libtool-bin; then
+            sudo ln -sf $(which libtool-bin) /usr/bin/libtool
+            echo "Created symlink: libtool -> libtool-bin"
+          fi
 
       - name: Install system deps (Ubuntu 24.04)
         run: |
