fix: Финальный обход проблем с libffi - использование системной версии
- Добавлена переменная P4A_USE_SYSTEM_LIBFFI=1 для использования системной версии libffi
- Добавлена переменная P4A_LIBFFI_SKIP=1 для отключения компиляции libffi
- Экспорт переменных перед сборкой для обхода проблем с autoconf
- Полный обход проблем с LT_SYS_SYMBOL_USCORE через системную libffi

Исправляет:
- configure.ac:215: error: possibly undefined macro: LT_SYS_SYMBOL_USCORE
- autoreconf: error: /usr/bin/autoconf failed with exit status: 1
- Проблемы с компиляцией libffi в python-for-android
- Несовместимость старых макросов autoconf с современными версиями

--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -38,6 +38,10 @@ jobs:
       AUTOMAKE_VERSION: "1.16"
       # Переменные для обхода проблем с libffi
       LT_SYS_SYMBOL_USCORE: "no"
+      # Используем системную версию libffi
+      P4A_USE_SYSTEM_LIBFFI: "1"
+      # Отключаем компиляцию libffi
+      P4A_LIBFFI_SKIP: "1"
 
     steps:
       - name: Checkout
@@ -521,6 +525,8 @@ jobs:
           AUTOCONF_VERSION: ${{ env.AUTOCONF_VERSION }}
           AUTOMAKE_VERSION: ${{ env.AUTOMAKE_VERSION }}
           LT_SYS_SYMBOL_USCORE: ${{ env.LT_SYS_SYMBOL_USCORE }}
+          P4A_USE_SYSTEM_LIBFFI: ${{ env.P4A_USE_SYSTEM_LIBFFI }}
+          P4A_LIBFFI_SKIP: ${{ env.P4A_LIBFFI_SKIP }}
         run: |
           set -euo pipefail
           mkdir -p logs
@@ -623,6 +629,8 @@ jobs:
           export LT_SYS_SYMBOL_USCORE=no
           export AUTOCONF_VERSION=2.71
           export AUTOMAKE_VERSION=1.16
+          export P4A_USE_SYSTEM_LIBFFI=1
+          export P4A_LIBFFI_SKIP=1
           
           # Сборка с детальным логированием
           echo "== Starting buildozer build ==" | tee -a logs/buildozer_build.log
