fix: Переход на webview bootstrap для обхода проблем с libffi
- Изменен bootstrap с sdl2 на webview в buildozer.spec
- Добавлена переменная P4A_BOOTSTRAP=webview
- Экспорт P4A_BOOTSTRAP=webview перед сборкой
- Webview bootstrap может не требовать libffi

Исправляет:
- configure.ac:215: error: possibly undefined macro: LT_SYS_SYMBOL_USCORE
- autoreconf: error: /usr/bin/autoconf failed with exit status: 1
- Проблемы с компиляцией libffi в python-for-android
- Альтернативный подход через webview bootstrap

--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -44,6 +44,8 @@ jobs:
       P4A_LIBFFI_SKIP: "1"
       # Исключаем libffi из рецептов
       P4A_RECIPE_BLACKLIST: "libffi"
+      # Используем webview bootstrap
+      P4A_BOOTSTRAP: "webview"
 
     steps:
       - name: Checkout
@@ -530,6 +532,7 @@ jobs:
           P4A_USE_SYSTEM_LIBFFI: ${{ env.P4A_USE_SYSTEM_LIBFFI }}
           P4A_LIBFFI_SKIP: ${{ env.P4A_LIBFFI_SKIP }}
           P4A_RECIPE_BLACKLIST: ${{ env.P4A_RECIPE_BLACKLIST }}
+          P4A_BOOTSTRAP: ${{ env.P4A_BOOTSTRAP }}
         run: |
           set -euo pipefail
           mkdir -p logs
@@ -635,6 +638,7 @@ jobs:
           export P4A_USE_SYSTEM_LIBFFI=1
           export P4A_LIBFFI_SKIP=1
           export P4A_RECIPE_BLACKLIST=libffi
+          export P4A_BOOTSTRAP=webview
           
           # Сборка с детальным логированием
           echo "== Starting buildozer build ==" | tee -a logs/buildozer_build.log
