--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -28,8 +28,8 @@ jobs:
       ANDROID_PLATFORM: "android-12"
       ANDROID_BUILD_TOOLS: "34.0.0"
       ANDROID_NDK_VERSION: "25.2.9519653"
-      ANDROIDAPI: "31"
-      ANDROIDMINAPI: "31"
+      ANDROIDAPI: "32"
+      ANDROIDMINAPI: "32"
       # Обход проблем с libffi
       LIBFFI_CFLAGS: "-I/usr/include/arm-linux-gnueabihf"
       LIBFFI_LIBS: "-lffi"
@@ -305,6 +305,14 @@ jobs:
           # Проверяем sdkmanager
           "$ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager" --version | tee -a logs/system_info.txt || true
           java -version 2>&1 | tee -a logs/system_info.txt || true
+          
+          # Принимаем лицензии Android SDK
+          echo "== Accepting Android SDK licenses ==" | tee -a logs/system_info.txt
+          echo "y" | "$ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager" --licenses | tee -a logs/system_info.txt || true
+          
+          # Устанавливаем platform android-12 (API 32) через sdkmanager
+          echo "== Installing platform android-12 (API 32) ==" | tee -a logs/system_info.txt
+          "$ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager" "platforms;android-32" | tee -a logs/system_info.txt || true
 
       - name: Install NDK (if needed)
         run: |
@@ -525,7 +533,7 @@ jobs:
           print(f'NDK Version: {ndk_version}')
           
           # Проверяем соответствие стабильным версиям
-          assert android_api == '31', f'Expected android.api=31, got {android_api}'
+          assert android_api == '32', f'Expected android.api=32, got {android_api}'
           assert android_platform == 'android-12', f'Expected android.platform=android-12, got {android_platform}'
           assert build_tools == '34.0.0', f'Expected android.build_tools=34.0.0, got {build_tools}'
           assert ndk_version == '25.2.9519653', f'Expected android.ndk=25.2.9519653, got {ndk_version}'
