--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -25,7 +25,7 @@ jobs:
       PIP_DISABLE_PIP_VERSION_CHECK: 1
       P4A_DEBUG: "1"
       # Стабильные версии Android SDK (соответствуют buildozer.spec)
-      ANDROID_PLATFORM: "android-12"
+      ANDROID_PLATFORM: "android-32"
       ANDROID_BUILD_TOOLS: "34.0.0"
       ANDROID_NDK_VERSION: "25.2.9519653"
       ANDROIDAPI: "32"
@@ -131,6 +131,7 @@ jobs:
         run: |
           set -euxo pipefail
           mkdir -p logs
+          echo "== Starting Android SDK installation ==" | tee -a logs/system_info.txt
           cd "$ANDROID_HOME"
           
           echo "== Installing Android SDK using alternative method =="
@@ -183,9 +184,21 @@ jobs:
                     # Ищем любую папку android-*
                     ANDROID_DIR=$(find . -maxdepth 1 -type d -name "android-*" | head -1)
                     if [ -n "$ANDROID_DIR" ]; then
-                      VERSION=$(basename "$ANDROID_DIR" | sed 's/android-//')
-                      mv "$ANDROID_DIR" "$VERSION"
-                      echo "✅ build-tools $VERSION downloaded and extracted"
+                      # Определяем правильную версию по URL
+                      if [[ "$url" == *"34.0.0"* ]]; then
+                        mv "$ANDROID_DIR" "34.0.0"
+                        echo "✅ build-tools 34.0.0 downloaded and extracted"
+                      elif [[ "$url" == *"33.0.2"* ]]; then
+                        mv "$ANDROID_DIR" "33.0.2"
+                        echo "✅ build-tools 33.0.2 downloaded and extracted"
+                      elif [[ "$url" == *"30.0.3"* ]]; then
+                        mv "$ANDROID_DIR" "30.0.3"
+                        echo "✅ build-tools 30.0.3 downloaded and extracted"
+                      else
+                        VERSION=$(basename "$ANDROID_DIR" | sed 's/android-//')
+                        mv "$ANDROID_DIR" "$VERSION"
+                        echo "✅ build-tools $VERSION downloaded and extracted"
+                      fi
                     fi
                   fi
                   
@@ -305,13 +318,13 @@ jobs:
           # Проверяем sdkmanager
           "$ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager" --version | tee -a logs/system_info.txt || true
           java -version 2>&1 | tee -a logs/system_info.txt || true
-          
+
           # Принимаем лицензии Android SDK
           echo "== Accepting Android SDK licenses ==" | tee -a logs/system_info.txt
           echo "y" | "$ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager" --licenses | tee -a logs/system_info.txt || true
           
-          # Устанавливаем platform android-12 (API 32) через sdkmanager
-          echo "== Installing platform android-12 (API 32) ==" | tee -a logs/system_info.txt
+          # Устанавливаем platform android-32 (API 32) через sdkmanager
+          echo "== Installing platform android-32 (API 32) ==" | tee -a logs/system_info.txt
           "$ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager" "platforms;android-32" | tee -a logs/system_info.txt || true
 
       - name: Install NDK (if needed)
@@ -534,7 +547,7 @@ jobs:
           
           # Проверяем соответствие стабильным версиям
           assert android_api == '32', f'Expected android.api=32, got {android_api}'
-          assert android_platform == 'android-12', f'Expected android.platform=android-12, got {android_platform}'
+          assert android_platform == 'android-32', f'Expected android.platform=android-32, got {android_platform}'
           assert build_tools == '34.0.0', f'Expected android.build_tools=34.0.0, got {build_tools}'
           assert ndk_version == '25.2.9519653', f'Expected android.ndk=25.2.9519653, got {ndk_version}'
           
