--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -25,11 +25,11 @@ jobs:
       PIP_DISABLE_PIP_VERSION_CHECK: 1
       P4A_DEBUG: "1"
       # Стабильные версии Android SDK (соответствуют buildozer.spec)
-      ANDROID_PLATFORM: "android-32"
+      ANDROID_PLATFORM: "android-12"
       ANDROID_BUILD_TOOLS: "34.0.0"
       ANDROID_NDK_VERSION: "25.2.9519653"
-      ANDROIDAPI: "32"
-      ANDROIDMINAPI: "32"
+      ANDROIDAPI: "31"
+      ANDROIDMINAPI: "31"
       # Обход проблем с libffi
       LIBFFI_CFLAGS: "-I/usr/include/arm-linux-gnueabihf"
       LIBFFI_LIBS: "-lffi"
@@ -309,23 +309,30 @@ jobs:
           
           cd ..
           
-          # Проверяем установку
+                    # Проверяем установку
           echo "== Verifying installation =="
           ls -la build-tools/ || true
           ls -la platforms/ || true
           ls -la platform-tools/ || true
           
+          # Создаем папку logs если её нет
+          mkdir -p logs
+          
           # Проверяем sdkmanager
           "$ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager" --version | tee -a logs/system_info.txt || true
           java -version 2>&1 | tee -a logs/system_info.txt || true
-
+          
           # Принимаем лицензии Android SDK
           echo "== Accepting Android SDK licenses ==" | tee -a logs/system_info.txt
           echo "y" | "$ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager" --licenses | tee -a logs/system_info.txt || true
           
-          # Устанавливаем platform android-32 (API 32) через sdkmanager
-          echo "== Installing platform android-32 (API 32) ==" | tee -a logs/system_info.txt
-          "$ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager" "platforms;android-32" | tee -a logs/system_info.txt || true
+          # Проверяем доступные platforms
+          echo "== Checking available platforms ==" | tee -a logs/system_info.txt
+          "$ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager" --list | grep "platforms;" | tee -a logs/system_info.txt || true
+          
+          # Устанавливаем platform android-12 (API 31) - доступный в системе
+          echo "== Installing platform android-12 (API 31) ==" | tee -a logs/system_info.txt
+          "$ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager" "platforms;android-12" | tee -a logs/system_info.txt || true
 
       - name: Install NDK (if needed)
         run: |
@@ -546,8 +553,8 @@ jobs:
           print(f'NDK Version: {ndk_version}')
           
           # Проверяем соответствие стабильным версиям
-          assert android_api == '32', f'Expected android.api=32, got {android_api}'
-          assert android_platform == 'android-32', f'Expected android.platform=android-32, got {android_platform}'
+          assert android_api == '31', f'Expected android.api=31, got {android_api}'
+          assert android_platform == 'android-12', f'Expected android.platform=android-12, got {android_platform}'
           assert build_tools == '34.0.0', f'Expected android.build_tools=34.0.0, got {build_tools}'
           assert ndk_version == '25.2.9519653', f'Expected android.ndk=25.2.9519653, got {ndk_version}'
           
