--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -29,7 +29,7 @@ jobs:
       ANDROID_BUILD_TOOLS: "34.0.0"
       ANDROID_NDK_VERSION: "25.2.9519653"
       ANDROIDAPI: "32"
-      ANDROIDMINAPI: "32"
+      ANDROIDMINAPI: "26"
       # Обход проблем с libffi
       LIBFFI_CFLAGS: "-I/usr/include/arm-linux-gnueabihf"
       LIBFFI_LIBS: "-lffi"
@@ -60,11 +60,19 @@ jobs:
           echo "Build tools: $ANDROID_BUILD_TOOLS" | tee -a logs/summary.txt
           echo "NDK version: $ANDROID_NDK_VERSION" | tee -a logs/summary.txt
 
-      - name: Set up Java 17 (Temurin)
+      - name: Set up Java 11 (Temurin)
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
-          java-version: '17'
+          java-version: '11'
+          cache: 'gradle'
+
+      - name: Verify Java 11 setup
+        run: |
+          echo "JAVA_HOME=$JAVA_HOME"
+          which javac
+          java -version
+          javac -version
 
       - name: Set up Python 3.10
         uses: actions/setup-python@v5
@@ -321,15 +329,12 @@ jobs:
 
           # Принимаем лицензии Android SDK
           echo "== Accepting Android SDK licenses ==" | tee -a logs/system_info.txt
-          echo "y" | "$ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager" --licenses | tee -a logs/system_info.txt || true
+          yes | "$ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager" --licenses | tee -a logs/system_info.txt || true
           
-          # Проверяем доступные platforms
-          echo "== Checking available platforms ==" | tee -a logs/system_info.txt
-          "$ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager" --list | grep "platforms;" | tee -a logs/system_info.txt || true
-          
-          # Устанавливаем platform android-32 (API 32) - доступный в системе
-          echo "== Installing platform android-32 (API 32) ==" | tee -a logs/system_info.txt
-          "$ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager" "platforms;android-32" | tee -a logs/system_info.txt || true
+          # Устанавливаем все необходимые компоненты через sdkmanager
+          echo "== Installing Android SDK components ==" | tee -a logs/system_info.txt
+          "$ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager" --sdk_root="$ANDROID_HOME" \
+            "platform-tools" "platforms;android-32" "build-tools;34.0.0" "ndk;25.2.9519653" | tee -a logs/system_info.txt || true
 
       - name: Install NDK (if needed)
         run: |
@@ -540,20 +545,23 @@ jobs:
           
           # Проверяем версии Android SDK
           android_api = cfg.get('app', 'android.api', fallback='')
+          android_minapi = cfg.get('app', 'android.minapi', fallback='')
           android_platform = cfg.get('android', 'android.platform', fallback='')
           build_tools = cfg.get('android', 'android.build_tools', fallback='')
           ndk_version = cfg.get('android', 'android.ndk', fallback='')
           
           print(f'Android API: {android_api}')
+          print(f'Android Min API: {android_minapi}')
           print(f'Android Platform: {android_platform}')
           print(f'Build Tools: {build_tools}')
           print(f'NDK Version: {ndk_version}')
           
           # Проверяем соответствие стабильным версиям
           assert android_api == '32', f'Expected android.api=32, got {android_api}'
+          assert android_minapi == '26', f'Expected android.minapi=26, got {android_minapi}'
           assert android_platform == 'android-32', f'Expected android.platform=android-32, got {android_platform}'
           assert build_tools == '34.0.0', f'Expected android.build_tools=34.0.0, got {build_tools}'
-          assert ndk_version == '25.2.9519653', f'Expected android.ndk=25.2.9519653, got {ndk_version}'
+          assert ndk_version == '25b', f'Expected android.ndk=25b, got {ndk_version}'
           
           print('buildozer.spec validation: PASSED')
           " | tee -a logs/summary.txt
