--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -112,7 +112,21 @@ jobs:
             libncurses6 libtinfo6 \
             build-essential \
             python3-dev \
-            python3-venv
+            python3-venv \
+            libbz2-dev libreadline-dev libsqlite3-dev \
+            libncurses5-dev libncursesw5-dev \
+            xz-utils tk-dev libxml2-dev libxmlsec1-dev \
+            liblzma-dev pkg-config autoconf automake \
+            libtool cmake ninja-build ccache \
+            wget curl file \
+            libc6-dev libc6-dev-i386 \
+            lib32stdc++6 lib32z1 lib32ncurses5 \
+            lib32bz2-1.0 lib32gcc-s1 lib32tinfo6 \
+            libc6-dev-armhf-cross gcc-arm-linux-gnueabihf \
+            g++-arm-linux-gnueabihf \
+            libc6-dev-arm64-cross gcc-aarch64-linux-gnu \
+            g++-aarch64-linux-gnu \
+            libgdbm-dev uuid-dev
 
       - name: System info (env, versions, disk)
         run: |
@@ -571,6 +585,8 @@ jobs:
           ANDROID_HOME: ${{ env.ANDROID_HOME }}
           ANDROID_NDK_HOME: ${{ env.ANDROID_NDK_HOME }}
           ANDROID_SDK_ROOT: ${{ env.ANDROID_HOME }}
+          ANDROIDSDK: ${{ env.ANDROID_HOME }}
+          ANDROIDNDK: ${{ env.ANDROID_NDK_HOME }}
           ANDROID_PLATFORM: ${{ env.ANDROID_PLATFORM }}
           ANDROID_BUILD_TOOLS: ${{ env.ANDROID_BUILD_TOOLS }}
           ANDROID_NDK_VERSION: ${{ env.ANDROID_NDK_VERSION }}
@@ -578,6 +594,7 @@ jobs:
           ANDROIDMINAPI: ${{ env.ANDROIDMINAPI }}
           LIBFFI_CFLAGS: ${{ env.LIBFFI_CFLAGS }}
           LIBFFI_LIBS: ${{ env.LIBFFI_LIBS }}
+          GRADLE_OPTS: "-Dorg.gradle.jvmargs=-Xmx2g -Dkotlin.daemon.jvm.options=-Xmx512m"
           AUTOCONF_VERSION: ${{ env.AUTOCONF_VERSION }}
           AUTOMAKE_VERSION: ${{ env.AUTOMAKE_VERSION }}
           LT_SYS_SYMBOL_USCORE: ${{ env.LT_SYS_SYMBOL_USCORE }}
